--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
   {% include head.html %}
   <body>
+    {% include header.html %}
     <div class="full-hero hero-home">
       <h1>I'm an h1</h1>
       <ul class="social-list">
